--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "plugins/frame-fns"]
 	path = plugins/frame-fns
 	url = https://github.com/emacsmirror/frame-fns.git
+[submodule "plugins/org-bullets"]
+	path = plugins/org-bullets
+	url = git://github.com/sabof/org-bullets.git
