adding the gradle plugin that gives some gradle functionality. will eventually make this into a minor mode with enhanced functionality

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "plugins/gradle-mode"]
 	path = plugins/gradle-mode
 	url = git@github.com:djmijares/emacs-gradle-mode.git
+[submodule "plugins/gradle"]
+	path = plugins/gradle
+	url = git@github.com:djmijares/gradle-el.git
