adding my fork of Crotti's yasnippet repo as a submodule for my emacs setup

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "snippets/java-mode"]
 	path = snippets/java-mode
 	url = https://github.com/nekop/yasnippet-java-mode.git
+[submodule "snippets"]
+	path = snippets
+	url = https://github.com/jacobono/yasnippet-snippets.git
